@@ -150,25 +150,25 @@
         <ul>
             <li class="vidthumb">
                 <a href="http://www.eea.europa.eu/cop15/">
-                    <img style="border: 1px solid #E0DED5" src="http://www.eea.europa.eu/cop15/intro/theme_image" title="EEA and the COP15 climate change conference">
+                    <img style="border: 1px solid #E0DED5" src="http://www.eea.europa.eu/cop15/intro/theme_image" title="EEA and the COP15 climate change conference" class="eea-tooltip-left">
                 </a>
             </li>
         
             <li class="vidthumb">
                 <a href="http://www.eea.europa.eu/cop15/bend-the-trend/">
-                    <img src="http://www.eea.europa.eu/cop15/spotlight/one-degree-matters/image_preview" title="Film: One Degree Matters">
+                    <img src="http://www.eea.europa.eu/cop15/spotlight/one-degree-matters/image_preview" title="Film: One Degree Matters" class="eea-tooltip-left">
                 </a>
             </li>
         
             <li class="vidthumb last">
                 <a href="http://www.eea.europa.eu/cop15/bend-the-trend/">
-                    <img src="http://www.eea.europa.eu/cop15/spotlight/environment-atlas/image_preview" title="Film: Environmental Atlas of Europe">
+                    <img src="http://www.eea.europa.eu/cop15/spotlight/environment-atlas/image_preview" title="Film: Environmental Atlas of Europe" class="eea-tooltip-left">
                 </a>
             </li>
         </ul>
         <div id="big_vid">
             <a href="http://www.eea.europa.eu/cop15">
-                <img src="http://www.eea.europa.eu/cop15/spotlight/cop15-spotlight-image" title="EEA and the COP15 climate change conference">
+                <img src="http://www.eea.europa.eu/cop15/spotlight/cop15-spotlight-image" title="EEA and the COP15 climate change conference" class="eea-tooltip-top">
             </a>
         </div>
         <div class="visualClear"><!-- --></div>
