@@ -4,6 +4,8 @@ Changelog
 0.9 - (Unreleased)
 ------------------
 
+ * Generalized the tooltip system #3003 [thuliper]
+
 0.8 - (2010-02-15)
 ------------------
 
